Fixed toogle nav z-index with carousel

--- a/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
@@ -190,6 +190,8 @@ ul.media-list ul {margin-left:64px;}
 nav.affix {top:0px;z-index:20;}
 .affix {width:100%;}
 
+.toggle-botton-nav {position:relative;z-index:20;}
+
 .poll-submission .radio,.poll-submission .checkbox {margin-top: 0px;margin-bottom: 0px;}
 .poll-submission label.checkbox, .poll-submission label.radio {margin-left:30px;display:block;font-weight:400;}
 .poll-submission .control-label {}
